--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,22 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "es2015",
         "moduleResolution": "node",
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "es2015"
+        ],
         "noImplicitAny": true,
         "jsx": "react",
         "target": "es2015",
-        "outDir": "dist"
+        "outDir": "dist",
+        "noUnusedLocals": true
     },
     "include": [
         "src"
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
