--- a/package.json
+++ b/package.json
@@ -18,19 +18,39 @@
   "dependencies": {},
   "devDependencies": {
     "@types/classnames": "^2.2.3",
+    "@types/enzyme": "^3.1.1",
+    "@types/jest": "^21.1.5",
     "@types/react": "^16.0.18",
     "@types/react-beautiful-dnd": "^2.3.0",
     "@types/react-dom": "^16.0.2",
+    "@types/react-select": "^1.0.59",
+    "@types/react-test-renderer": "^16.0.0",
     "classnames": "^2.2.5",
     "core-js": "^2.5.1",
+    "enzyme": "^3.1.0",
     "http-server": "^0.10.0",
+    "jest": "^21.2.1",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-beautiful-dnd": "^2.4.1",
     "react-dom": "^16.0.0",
+    "react-select": "^1.0.0-rc.10",
+    "react-test-renderer": "^16.0.0",
+    "ts-jest": "^21.1.3",
     "ts-loader": "^3.0.5",
     "typescript": "^2.5.3",
     "webpack": "^3.8.1",
     "whatwg-fetch": "^2.0.3"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
