--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "core-js": "^2.5.1",
     "enzyme": "^3.1.0",
     "http-server": "^0.10.0",
-    "jest": "^21.2.1",
+    "jest": "^21.3.0-beta.4",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-beautiful-dnd": "^2.4.1",
@@ -46,7 +46,9 @@
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testMatch": [
+      "**/__tests__/*.(ts|tsx|js)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
