--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
         "noUnusedLocals": true
     },
     "include": [
-        "src"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules"
